# remote_input

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: mice_file.rs  vec_to_console.rs
src/: event.rs  lib.rs  main.rs  packet.rs  server.rs
src/events/: mod.rs  windows_events.rs
src/linux/: mod.rs
src/linux/source/: dev_mice.rs  mice_file.rs  mod.rs
src/sink/: console_sink.rs  input_sink.rs  mod.rs
src/source/: input_source.rs  mod.rs  vec_source.rs
