[package]
name = "remote_input"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.42.0", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13.1", optional = true }
evdev = { version = "0.12.2", optional = true }

[features]
default = ["evdev", "x11"]
evdev = ["dep:evdev"]
dev_mice = []
x11 = ["dep:x11rb"]
